--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,6 +6,7 @@ spring:
       driver-class-name: org.h2.Driver
 
   jpa:
+#    open-in-view: false
     hibernate:
       ddl-auto: create # app 실행 시점에 가진 table(entity)를 지우고 다시 생성
     properties:
